--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes bounce {
+  20% {
+    translate: 0 -50%;
+  }
+  40% {
+    translate: 0 0;
+  }
+}
