--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,8 +11,14 @@
   }
 }
 
-@media not (prefers-color-scheme: dark) {
-  .polka {
+@media (prefers-color-scheme: dark) {
+  .background {
+    @apply bg-slate-900 caret-white accent-white;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .background {
     --size: 0.1ex;
 
     background-image: radial-gradient(#e2e8f0 var(--size), transparent 0),
