--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -33,3 +33,29 @@
     display: none;
   }
 }
+
+.progress {
+  --delay: 500ms;
+  --timeout: 1s;
+  @apply absolute top-0 z-20 h-1 w-0 bg-rose-700 bg-opacity-25;
+}
+
+.progress[data-loading='true'] {
+  transition: width var(--timeout);
+  transition-delay: var(--delay);
+  @apply w-full;
+}
+
+.progress div {
+  @apply h-full w-1/2 bg-rose-500;
+  animation: progress var(--timeout) ease-in-out var(--delay) infinite;
+}
+
+@keyframes progress {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(200%);
+  }
+}
