--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -23,12 +23,13 @@
     --dot-color: #e2e8f0;
     --granularity: 32px;
 
-    background-image:
-      radial-gradient(var(--dot-color) var(--size), transparent 0),
+    background-image: radial-gradient(
+        var(--dot-color) var(--size),
+        transparent 0
+      ),
       radial-gradient(var(--dot-color) var(--size), #fff 0);
 
-    background-position:
-      0 0,
+    background-position: 0 0,
       calc(var(--granularity) / 2) calc(var(--granularity) / 2);
     background-size: var(--granularity) var(--granularity);
   }
@@ -45,7 +46,7 @@
   @apply w-full;
 }
 
-._progress[data-loading="true"] div {
+._progress[data-loading="true"] [data-loader-effect] {
   @apply h-full w-1/2 bg-rose-500;
   animation: progress;
   animation-duration: var(--duration);
