--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,6 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@config '../tailwind.config.ts';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
 
 @keyframes bounce {
   20% {
@@ -23,13 +41,12 @@
     --dot-color: #e2e8f0;
     --granularity: 32px;
 
-    background-image: radial-gradient(
-        var(--dot-color) var(--size),
-        transparent 0
-      ),
+    background-image:
+      radial-gradient(var(--dot-color) var(--size), transparent 0),
       radial-gradient(var(--dot-color) var(--size), #fff 0);
 
-    background-position: 0 0,
+    background-position:
+      0 0,
       calc(var(--granularity) / 2) calc(var(--granularity) / 2);
     background-size: var(--granularity) var(--granularity);
   }
@@ -37,7 +54,7 @@
 
 ._progress {
   --duration: 1.2s;
-  @apply absolute top-0 z-20 h-1 w-0 bg-rose-700 bg-opacity-25;
+  @apply absolute top-0 z-20 h-1 w-0 bg-rose-700 bg-rose-700/25;
 }
 
 ._progress[data-loading="true"] {
